--- a/FUIExamples/FUIExamples.csproj
+++ b/FUIExamples/FUIExamples.csproj
@@ -5,8 +5,7 @@
     <ProjectGuid>{3E069EAA-D855-4545-A78F-C28380062B74}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\scrolling-nav.css" />
+    <Content Include="Content\resetpw.css" />
     <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -14,9 +13,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Scripts\scrolling-nav.js" />
+    <Content Include="images\pwr_book.png" />
+    <Content Include="images\pwr_dog.png" />
+    <Content Include="images\resetpw_bg.jpg" />
+    <Content Include="images\pwr_soccerball.png" />
+    <Content Include="images\pwr_whale.png" />
     <Content Include="index.html" />
-    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="ResetPassword.html" />
     <Content Include="Scripts\jquery-3.3.1.js" />
+    <Content Include="Scripts\resetpw.js" />
   </ItemGroup>
+  <ItemGroup />
 </Project>
